--- a/.env
+++ b/.env
@@ -18,3 +18,9 @@
 APP_ENV=dev
 APP_SECRET=a8ffa1b07fa3d38bdfc546d4b0d3d4b8
 ###< symfony/framework-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=124383964f69636181d4459c65530ec7
+###< lexik/jwt-authentication-bundle ###
