--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,8 +1,3 @@
-controllers:
-    resource:
-        path: ../src/Controller/
-        namespace: App\Controller
-    type: attribute
-
-    api_login_check:
-        path: /api/login_check
+# config/routes.yaml
+api_login_check:
+    path: /api/login_check
